<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkbackground"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".SettingActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="32dp"
            android:background="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/image_description" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1" />

    </LinearLayout>


    <TextView
        android:id="@+id/device_switiching"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:text="@string/device_switiching"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/device_discovery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/ed_curved"
        android:padding="15dp"
        android:text="@string/device_discovery"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/ed_curved"
        android:padding="15dp"
        android:text="@string/terms_amp_condition"
        android:textColor="@color/white"
        android:textSize="14sp" />



</LinearLayout>